--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.35", features = ["derive"] }
+futures-util = "0.3.31"
 rustls = "0.23.25"
 tokio = { version = "1", features = [
   "rt-multi-thread",
@@ -14,5 +15,7 @@ tokio = { version = "1", features = [
   "macros",
 ] }
 tokio-rustls = "0.26.2"
-tokio-tungstenite = "0.26.2"
+tokio-tungstenite = { version = "0.26.2", features = [
+  "rustls-tls-native-roots",
+] }
 webpki-roots = "0.26.8"
